# itchy

./: .gitignore  AUDIT_REPORT.md  README.md  install.sh  instructions.md  output.json  test_ev.py
itchy/: SKILL.md
itchy/evals/: evals.json
itchy/references/: formulas.md
itchy/references/lotteries/: nc.md
itchy/scripts/: fetch_nc_data.py  fetch_nc_winners.py
itchy/tests/: test_eval_metadata.py  test_fetch_nc_data.py
itchy/tests/fixtures/: nc_prizes_remaining_chrome_only.html  nc_prizes_remaining_fragment.html
scratchiq/: SKILL.md
scratchiq-workspace/iteration-1/budget-20-basic/: eval_metadata.json
scratchiq-workspace/iteration-1/photo-display-50/: eval_metadata.json
scratchiq-workspace/iteration-1/ten-dollar-filter/: eval_metadata.json
scratchiq/scripts/: fetch_nc_data.py
scratchiq/tests/: test_eval_metadata.py  test_fetch_nc_data.py
scratchy/: .env.example  README.md  SKILL.md  docker-compose.yml  pyproject.toml
scratchy/evals/: evals.json
scratchy/migrations/: 001_create_purchases.sql
scratchy/src/: db.py  main.py
scratchy/src/public/: index.html
scratchy/src/routes/: purchases.py  stats.py
scratchy/src/services/: ev_fetcher.py
tracker/: .env.example  docker-compose.yml  pyproject.toml
tracker/src/: db.py  main.py  migrate.py
tracker/src/public/: index.html
tracker/src/routes/: purchases.py
